test/negative/no_main.cg
// This file is intended to fail: `--emit-exe` requires a `main` entry point.

fn foo() -> i32 { 0 }

